Added more Control property manipulation methods in WinForms.Forms.

--- a/JunX.NET8.csproj
+++ b/JunX.NET8.csproj
@@ -8,4 +8,8 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="WinForms.DataVisualization" Version="1.10.0" />
+  </ItemGroup>
+
 </Project>
