--- a/JunX.NET8.csproj
+++ b/JunX.NET8.csproj
@@ -12,4 +12,16 @@
     <PackageReference Include="WinForms.DataVisualization" Version="1.10.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="WinForms\Inputs\InputNUD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="WinForms\Inputs\InputDTP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="WinForms\Inputs\InputCMB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
